--- a/index.html
+++ b/index.html
@@ -14,5 +14,107 @@
             <h2>Kirill Shalnov 201-321</h2>
         </div>
     </header>
+
+    <section class="block1">
+        <h2 class="block1_header">flex-direction</h2>
+
+        <h3 class="block1_1_header">row + flex-wrap: nowrap; ( + flex-grow)</h3>
+        <div class="block1_1_container">
+            <div class="item block1_1_1_item">
+                <img src="https://robohash.org/1" alt="image 1" class="image">
+                <p class="item_header">1</p>
+                <p class="item_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus excepturi deleniti hic velit ducimus mollitia quis</p>
+            </div>
+            <div class="item block1_1_2_item">
+                <img src="https://robohash.org/2" alt="image 1" class="image">
+                <p class="item_header">2</p>
+                <p class="item_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus excepturi deleniti hic velit ducimus mollitia quis</p>
+            </div>
+            <div class="item block1_1_3_item">
+                <img src="https://robohash.org/3" alt="image 1" class="image">
+                <p class="item_header">3</p>
+                <p class="item_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus excepturi deleniti hic velit ducimus mollitia quis</p>
+            </div>
+            <div class="item block1_1_4_item">
+                <img src="https://robohash.org/4" alt="image 1" class="image">
+                <p class="item_header">4</p>
+                <p class="item_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus excepturi deleniti hic velit ducimus mollitia quis</p>
+            </div>
+        </div>
+
+        <h3 class="block1_2_header">row-reverse + flex-wrap: wrap; + justify-content: space-between; ( + order)</h3>
+        <div class="block1_2_container">
+            <div class="item block1_2_1_item">
+                <img src="https://robohash.org/1" alt="image 1" class="image">
+                <p class="item_header">1</p>
+                <p class="item_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus excepturi deleniti hic velit ducimus mollitia quis</p>
+            </div>
+            <div class="item block1_2_item">
+                <img src="https://robohash.org/2" alt="image 1" class="image">
+                <p class="item_header">2</p>
+                <p class="item_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus excepturi deleniti hic velit ducimus mollitia quis</p>
+            </div>
+            <div class="item block1_2_item">
+                <img src="https://robohash.org/3" alt="image 1" class="image">
+                <p class="item_header">3</p>
+                <p class="item_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus excepturi deleniti hic velit ducimus mollitia quis</p>
+            </div>
+            <div class="item block1_2_item">
+                <img src="https://robohash.org/4" alt="image 1" class="image">
+                <p class="item_header">4</p>
+                <p class="item_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus excepturi deleniti hic velit ducimus mollitia quis</p>
+            </div>
+        </div>
+
+        <h3 class="block1_3_header">column</h3>
+        <div class="block1_3_container">
+            <div class="item block1_3_item">
+                <img src="https://robohash.org/1" alt="image 1" class="image">
+                <p class="item_header">1</p>
+                <p class="item_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus excepturi deleniti hic velit ducimus mollitia quis</p>
+            </div>
+            <div class="item block1_3_item">
+                <img src="https://robohash.org/2" alt="image 1" class="image">
+                <p class="item_header">2</p>
+                <p class="item_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus excepturi deleniti hic velit ducimus mollitia quis</p>
+            </div>
+            <div class="item block1_3_item">
+                <img src="https://robohash.org/3" alt="image 1" class="image">
+                <p class="item_header">3</p>
+                <p class="item_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus excepturi deleniti hic velit ducimus mollitia quis</p>
+            </div>
+            <div class="item block1_3_item">
+                <img src="https://robohash.org/4" alt="image 1" class="image">
+                <p class="item_header">4</p>
+                <p class="item_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus excepturi deleniti hic velit ducimus mollitia quis</p>
+            </div>
+        </div>
+
+        <h3 class="block1_4_header">column-reverse</h3>
+        <div class="block1_4_container">
+            <div class="item block1_4_item">
+                <img src="https://robohash.org/1" alt="image 1" class="image">
+                <p class="item_header">1</p>
+                <p class="item_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus excepturi deleniti hic velit ducimus mollitia quis</p>
+            </div>
+            <div class="item block1_4_item">
+                <img src="https://robohash.org/2" alt="image 1" class="image">
+                <p class="item_header">2</p>
+                <p class="item_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus excepturi deleniti hic velit ducimus mollitia quis</p>
+            </div>
+            <div class="item block1_4_item">
+                <img src="https://robohash.org/3" alt="image 1" class="image">
+                <p class="item_header">3</p>
+                <p class="item_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus excepturi deleniti hic velit ducimus mollitia quis</p>
+            </div>
+            <div class="item block1_4_item">
+                <img src="https://robohash.org/4" alt="image 1" class="image">
+                <p class="item_header">4</p>
+                <p class="item_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus excepturi deleniti hic velit ducimus mollitia quis</p>
+            </div>
+        </div>
+
+    </section>
+
 </body>
 </html>
