--- a/index.html
+++ b/index.html
@@ -116,5 +116,67 @@
 
     </section>
 
+
+
+    <section class="block2">
+        <h2 class="block2_header">flex-wrap</h2>
+
+        <h3 class="block2_1_header">wrap-reverse + justify-content: flex-end;</h3>
+        <div class="block2_1_container">
+            <div class="item block2_1_1_item">
+                <img src="https://robohash.org/1" alt="image 1" class="image">
+                <p class="item_header">1</p>
+                <p class="item_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus excepturi deleniti hic velit ducimus mollitia quis</p>
+            </div>
+            <div class="item block2_1_2_item">
+                <img src="https://robohash.org/2" alt="image 1" class="image">
+                <p class="item_header">2</p>
+                <p class="item_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus excepturi deleniti hic velit ducimus mollitia quis</p>
+            </div>
+            <div class="item block2_1_3_item">
+                <img src="https://robohash.org/3" alt="image 1" class="image">
+                <p class="item_header">3</p>
+                <p class="item_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus excepturi deleniti hic velit ducimus mollitia quis</p>
+            </div>
+            <div class="item block2_1_4_item">
+                <img src="https://robohash.org/4" alt="image 1" class="image">
+                <p class="item_header">4</p>
+                <p class="item_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus excepturi deleniti hic velit ducimus mollitia quis</p>
+            </div>
+        </div>
+
+    </section>
+
+
+
+    <section class="block3">
+        <h2 class="block3_header">flex-flow</h2>
+
+        <h3 class="block3_1_header">row wrap + justify-content: flex-start; + align-items: flex-start;</h3>
+        <div class="block3_1_container">
+            <div class="item block3_1_1_item">
+                <img src="https://robohash.org/1" alt="image 1" class="image">
+                <p class="item_header">1</p>
+                <p class="item_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus excepturi deleniti hic velit ducimus mollitia quis</p>
+            </div>
+            <div class="item block3_1_2_item">
+                <img src="https://robohash.org/2" alt="image 1" class="image">
+                <p class="item_header">2</p>
+                <p class="item_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus excepturi deleniti hic velit ducimus mollitia quis</p>
+            </div>
+            <div class="item block3_1_3_item">
+                <img src="https://robohash.org/3" alt="image 1" class="image">
+                <p class="item_header">3</p>
+                <p class="item_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus excepturi deleniti hic velit ducimus mollitia quis</p>
+            </div>
+            <div class="item block3_1_4_item">
+                <img src="https://robohash.org/4" alt="image 1" class="image">
+                <p class="item_header">4</p>
+                <p class="item_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus excepturi deleniti hic velit ducimus mollitia quis</p>
+            </div>
+        </div>
+
+    </section>
+
 </body>
 </html>
